<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_26_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="#E91E63"
        app:cardCornerRadius="16dp"
        android:id="@+id/pink_card"
        android:layout_margin="16dp"
        app:cardElevation="@dimen/dimen_16"

        android:background="@color/purple_700"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_height="180dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:id="@+id/text_sos"
        android:layout_margin="16dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="22sp"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"/>
    />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/text_sos"
        android:text="@string/text_sos"
        android:textColor="@color/white"
        android:elevation="16dp"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toStartOf="@+id/sos_img"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        android:id="@+id/sos_msg"/>

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:src="@drawable/sos"
        android:elevation="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"/>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor ="#4CAF50"
        app:cardCornerRadius="16dp"
        android:id="@+id/green_card"
        android:layout_margin="16dp"
        app:cardElevation="@dimen/dimen_16"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/pink_card"
        android:layout_height="180dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:id="@+id/text_guard"
        android:layout_margin="16dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:elevation="16dp"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/text_guard"
        android:text="@string/text_guard"
        android:textColor="@color/white"
        android:elevation="16dp"

        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintEnd_toStartOf="@+id/sheild"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        android:id="@+id/sos_guard"/>

    <ImageView
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:elevation="16dp"
        android:id="@+id/sheild"
        android:src="@drawable/shield"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"/>



</androidx.constraintlayout.widget.ConstraintLayout>